src/LangParser.py
# Generated from Lang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class LangParser(Parser):

    grammarFileName = "Lang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'if'",
        "'else'",
        "'while'",
        "'print'",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'*'",
        "'/'",
        "'+'",
        "'-'",
        "'='",
        "'=='",
        "'!='",
        "'>'",
        "'<'",
        "'>='",
        "'<='",
        "'('",
        "')'",
        "'{'",
        "'}'",
        "';'",
    ]

    symbolicNames = [
        "<INVALID>",
        "IF",
        "ELSE",
        "WHILE",
        "PRINT",
        "ID",
        "INT",
        "FLOAT",
        "STRING",
        "MUL",
        "DIV",
        "ADD",
        "SUB",
        "EQ",
        "EQEQ",
        "NEQ",
        "GT",
        "LT",
        "GTE",
        "LTE",
        "LPAREN",
        "RPAREN",
        "LBRACE",
        "RBRACE",
        "SEMI",
        "WS",
        "COMMENT",
    ]

    RULE_program = 0
    RULE_statement = 1
    RULE_assignment_statement = 2
    RULE_if_statement = 3
    RULE_while_statement = 4
    RULE_print_statement = 5
    RULE_expression = 6
    RULE_atom = 7

    ruleNames = [
        "program",
        "statement",
        "assignment_statement",
        "if_statement",
        "while_statement",
        "print_statement",
        "expression",
        "atom",
    ]

    EOF = Token.EOF
    IF = 1
    ELSE = 2
    WHILE = 3
    PRINT = 4
    ID = 5
    INT = 6
    FLOAT = 7
    STRING = 8
    MUL = 9
    DIV = 10
    ADD = 11
    SUB = 12
    EQ = 13
    EQEQ = 14
    NEQ = 15
    GT = 16
    LT = 17
    GTE = 18
    LTE = 19
    LPAREN = 20
    RPAREN = 21
    LBRACE = 22
    RBRACE = 23
    SEMI = 24
    WS = 25
    COMMENT = 26

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class ProgramContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LangParser.EOF, 0)

        def statement(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.StatementContext)
            else:
                return self.getTypedRuleContext(LangParser.StatementContext, i)

        def getRuleIndex(self):
            return LangParser.RULE_program

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterProgram"):
                listener.enterProgram(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitProgram"):
                listener.exitProgram(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitProgram"):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)

    def program(self):

        localctx = LangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and ((1 << _la) & 58) != 0:
                self.state = 16
                self.statement()
                self.state = 21
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 22
            self.match(LangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment_statement(self):
            return self.getTypedRuleContext(LangParser.Assignment_statementContext, 0)

        def if_statement(self):
            return self.getTypedRuleContext(LangParser.If_statementContext, 0)

        def while_statement(self):
            return self.getTypedRuleContext(LangParser.While_statementContext, 0)

        def print_statement(self):
            return self.getTypedRuleContext(LangParser.Print_statementContext, 0)

        def getRuleIndex(self):
            return LangParser.RULE_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStatement"):
                listener.enterStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStatement"):
                listener.exitStatement(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitStatement"):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)

    def statement(self):

        localctx = LangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 28
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 24
                self.assignment_statement()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 25
                self.if_statement()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 26
                self.while_statement()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 27
                self.print_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Assignment_statementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LangParser.ID, 0)

        def EQ(self):
            return self.getToken(LangParser.EQ, 0)

        def expression(self):
            return self.getTypedRuleContext(LangParser.ExpressionContext, 0)

        def SEMI(self):
            return self.getToken(LangParser.SEMI, 0)

        def getRuleIndex(self):
            return LangParser.RULE_assignment_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAssignment_statement"):
                listener.enterAssignment_statement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAssignment_statement"):
                listener.exitAssignment_statement(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAssignment_statement"):
                return visitor.visitAssignment_statement(self)
            else:
                return visitor.visitChildren(self)

    def assignment_statement(self):

        localctx = LangParser.Assignment_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.match(LangParser.ID)
            self.state = 31
            self.match(LangParser.EQ)
            self.state = 32
            self.expression(0)
            self.state = 33
            self.match(LangParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class If_statementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(LangParser.IF, 0)

        def LPAREN(self):
            return self.getToken(LangParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(LangParser.ExpressionContext, 0)

        def RPAREN(self):
            return self.getToken(LangParser.RPAREN, 0)

        def LBRACE(self, i: int = None):
            if i is None:
                return self.getTokens(LangParser.LBRACE)
            else:
                return self.getToken(LangParser.LBRACE, i)

        def program(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.ProgramContext)
            else:
                return self.getTypedRuleContext(LangParser.ProgramContext, i)

        def RBRACE(self, i: int = None):
            if i is None:
                return self.getTokens(LangParser.RBRACE)
            else:
                return self.getToken(LangParser.RBRACE, i)

        def ELSE(self):
            return self.getToken(LangParser.ELSE, 0)

        def getRuleIndex(self):
            return LangParser.RULE_if_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterIf_statement"):
                listener.enterIf_statement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitIf_statement"):
                listener.exitIf_statement(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitIf_statement"):
                return visitor.visitIf_statement(self)
            else:
                return visitor.visitChildren(self)

    def if_statement(self):

        localctx = LangParser.If_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_if_statement)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.match(LangParser.IF)
            self.state = 36
            self.match(LangParser.LPAREN)
            self.state = 37
            self.expression(0)
            self.state = 38
            self.match(LangParser.RPAREN)
            self.state = 39
            self.match(LangParser.LBRACE)
            self.state = 40
            self.program()
            self.state = 41
            self.match(LangParser.RBRACE)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 2:
                self.state = 42
                self.match(LangParser.ELSE)
                self.state = 43
                self.match(LangParser.LBRACE)
                self.state = 44
                self.program()
                self.state = 45
                self.match(LangParser.RBRACE)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class While_statementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(LangParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(LangParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(LangParser.ExpressionContext, 0)

        def RPAREN(self):
            return self.getToken(LangParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(LangParser.LBRACE, 0)

        def program(self):
            return self.getTypedRuleContext(LangParser.ProgramContext, 0)

        def RBRACE(self):
            return self.getToken(LangParser.RBRACE, 0)

        def getRuleIndex(self):
            return LangParser.RULE_while_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterWhile_statement"):
                listener.enterWhile_statement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitWhile_statement"):
                listener.exitWhile_statement(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitWhile_statement"):
                return visitor.visitWhile_statement(self)
            else:
                return visitor.visitChildren(self)

    def while_statement(self):

        localctx = LangParser.While_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_while_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(LangParser.WHILE)
            self.state = 50
            self.match(LangParser.LPAREN)
            self.state = 51
            self.expression(0)
            self.state = 52
            self.match(LangParser.RPAREN)
            self.state = 53
            self.match(LangParser.LBRACE)
            self.state = 54
            self.program()
            self.state = 55
            self.match(LangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Print_statementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(LangParser.PRINT, 0)

        def expression(self):
            return self.getTypedRuleContext(LangParser.ExpressionContext, 0)

        def SEMI(self):
            return self.getToken(LangParser.SEMI, 0)

        def getRuleIndex(self):
            return LangParser.RULE_print_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPrint_statement"):
                listener.enterPrint_statement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPrint_statement"):
                listener.exitPrint_statement(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPrint_statement"):
                return visitor.visitPrint_statement(self)
            else:
                return visitor.visitChildren(self)

    def print_statement(self):

        localctx = LangParser.Print_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_print_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(LangParser.PRINT)
            self.state = 58
            self.expression(0)
            self.state = 59
            self.match(LangParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return LangParser.RULE_expression

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class MulDivExprContext(ExpressionContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a LangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(LangParser.ExpressionContext, i)

        def MUL(self):
            return self.getToken(LangParser.MUL, 0)

        def DIV(self):
            return self.getToken(LangParser.DIV, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterMulDivExpr"):
                listener.enterMulDivExpr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitMulDivExpr"):
                listener.exitMulDivExpr(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitMulDivExpr"):
                return visitor.visitMulDivExpr(self)
            else:
                return visitor.visitChildren(self)

    class CompExprContext(ExpressionContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a LangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(LangParser.ExpressionContext, i)

        def LT(self):
            return self.getToken(LangParser.LT, 0)

        def GT(self):
            return self.getToken(LangParser.GT, 0)

        def LTE(self):
            return self.getToken(LangParser.LTE, 0)

        def GTE(self):
            return self.getToken(LangParser.GTE, 0)

        def EQEQ(self):
            return self.getToken(LangParser.EQEQ, 0)

        def NEQ(self):
            return self.getToken(LangParser.NEQ, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterCompExpr"):
                listener.enterCompExpr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitCompExpr"):
                listener.exitCompExpr(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitCompExpr"):
                return visitor.visitCompExpr(self)
            else:
                return visitor.visitChildren(self)

    class AtomExprContext(ExpressionContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a LangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def atom(self):
            return self.getTypedRuleContext(LangParser.AtomContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAtomExpr"):
                listener.enterAtomExpr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAtomExpr"):
                listener.exitAtomExpr(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAtomExpr"):
                return visitor.visitAtomExpr(self)
            else:
                return visitor.visitChildren(self)

    class AddSubExprContext(ExpressionContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a LangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(LangParser.ExpressionContext, i)

        def ADD(self):
            return self.getToken(LangParser.ADD, 0)

        def SUB(self):
            return self.getToken(LangParser.SUB, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAddSubExpr"):
                listener.enterAddSubExpr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAddSubExpr"):
                listener.exitAddSubExpr(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAddSubExpr"):
                return visitor.visitAddSubExpr(self)
            else:
                return visitor.visitChildren(self)

    def expression(self, _p: int = 0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = LangParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_expression, _p)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = LangParser.AtomExprContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 62
            self.atom()
            self._ctx.stop = self._input.LT(-1)
            self.state = 75
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 4, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 73
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input, 3, self._ctx)
                    if la_ == 1:
                        localctx = LangParser.MulDivExprContext(
                            self,
                            LangParser.ExpressionContext(
                                self, _parentctx, _parentState
                            ),
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_expression
                        )
                        self.state = 64
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 4)"
                            )
                        self.state = 65
                        _la = self._input.LA(1)
                        if not (_la == 9 or _la == 10):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 66
                        self.expression(5)
                        pass

                    elif la_ == 2:
                        localctx = LangParser.AddSubExprContext(
                            self,
                            LangParser.ExpressionContext(
                                self, _parentctx, _parentState
                            ),
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_expression
                        )
                        self.state = 67
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 3)"
                            )
                        self.state = 68
                        _la = self._input.LA(1)
                        if not (_la == 11 or _la == 12):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 69
                        self.expression(4)
                        pass

                    elif la_ == 3:
                        localctx = LangParser.CompExprContext(
                            self,
                            LangParser.ExpressionContext(
                                self, _parentctx, _parentState
                            ),
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_expression
                        )
                        self.state = 70
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 2)"
                            )
                        self.state = 71
                        _la = self._input.LA(1)
                        if not ((((_la) & ~0x3F) == 0 and ((1 << _la) & 1032192) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 72
                        self.expression(3)
                        pass

                self.state = 77
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 4, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class AtomContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(LangParser.INT, 0)

        def FLOAT(self):
            return self.getToken(LangParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(LangParser.STRING, 0)

        def ID(self):
            return self.getToken(LangParser.ID, 0)

        def LPAREN(self):
            return self.getToken(LangParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(LangParser.ExpressionContext, 0)

        def RPAREN(self):
            return self.getToken(LangParser.RPAREN, 0)

        def getRuleIndex(self):
            return LangParser.RULE_atom

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAtom"):
                listener.enterAtom(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAtom"):
                listener.exitAtom(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAtom"):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)

    def atom(self):

        localctx = LangParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_atom)
        try:
            self.state = 86
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.match(LangParser.INT)
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.match(LangParser.FLOAT)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 80
                self.match(LangParser.STRING)
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 81
                self.match(LangParser.ID)
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 5)
                self.state = 82
                self.match(LangParser.LPAREN)
                self.state = 83
                self.expression(0)
                self.state = 84
                self.match(LangParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    def sempred(self, localctx: RuleContext, ruleIndex: int, predIndex: int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[6] = self.expression_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expression_sempred(self, localctx: ExpressionContext, predIndex: int):
        if predIndex == 0:
            return self.precpred(self._ctx, 4)

        if predIndex == 1:
            return self.precpred(self._ctx, 3)

        if predIndex == 2:
            return self.precpred(self._ctx, 2)